
templatesdir = $(datadir)/grib_api/templates

dist_templates_DATA = \
    GRIB1.tmpl \
    GRIB2.tmpl \
    reduced_gg_ml_grib1.tmpl \
    reduced_gg_ml_grib2.tmpl \
    reduced_gg_pl_grib1.tmpl \
    reduced_gg_pl_grib2.tmpl \
    reduced_gg_sfc_grib1.tmpl \
    reduced_gg_sfc_grib2.tmpl \
    reduced_gg_sfc_jpeg_grib2.tmpl \
    reduced_ll_sfc_grib1.tmpl \
    reduced_ll_sfc_grib2.tmpl \
    regular_gg_ml_grib1.tmpl \
    regular_gg_ml_grib2.tmpl \
    regular_gg_pl_grib1.tmpl \
    regular_gg_pl_grib2.tmpl \
    regular_ll_pl_grib1.tmpl \
    regular_ll_pl_grib2.tmpl \
    regular_ll_sfc_grib1.tmpl \
    regular_ll_sfc_grib2.tmpl \
    sh_ml_grib1.tmpl \
    sh_ml_grib2.tmpl \
    sh_pl_grib1.tmpl \
    sh_pl_grib2.tmpl
